fix: upload_photo add: validate_token route
